Fix sidebar (should disappear on smaller screens)

--- a/tests/dummy/app/styles/_variables.scss
+++ b/tests/dummy/app/styles/_variables.scss
@@ -1,4 +1,5 @@
 $base: 5px;
+$sidebar-width: 250px;
 
 $white: #fff;
 $black: #000;
